Menambahkan favicon ke halaman index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Irfan Sabrian Fadhillah - Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="images/Logo Irfan White.svg" />
     <meta
       name="description"
       content="Portfolio of Irfan Sabrian Fadhillah - Frontend Developer, Web Designer, and Data Analytics Explorer"
