--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Irfan Sabrian Fadhillah - Portfolio</title>
+    <title>PortfolioIrfanS.</title>
     <link rel="icon" type="image/svg+xml" href="images/Logo Irfan White.svg" />
     <meta
       name="description"
@@ -73,7 +73,7 @@
           </svg>
           <span
             class="text-xl font-semibold logo-text transition-colors duration-300"
-            >Irfan Sabrian</span
+            >PortfolioIrfanS.</span
           >
         </div>
         <ul class="hidden md:flex items-center space-x-10 h-full">
