--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PortfolioIrfanS.</title>
-    <link rel="icon" type="image/svg+xml" href="images/Logo Irfan White.svg" />
+    <link rel="icon" type="image/svg+xml" href="images/Logo Irfan Blue.svg" />
     <meta
       name="description"
-      content="Portfolio of Irfan Sabrian Fadhillah - Frontend Developer, Web Designer, and Data Analytics Explorer"
+      content="Portfolio of Irfan Sabrian - Frontend Developer, Web Designer, and Data Analytics Explorer"
     />
-    <meta name="author" content="Irfan Sabrian Fadhillah" />
+    <meta name="author" content="Irfan Sabrian" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -179,7 +179,7 @@
               <h1
                 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4 leading-tight"
               >
-                I'm Irfan Sabrian Fadhillah
+                I'm Irfan Sabrian
               </h1>
               <p class="text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8">
                 <span class="typed-text"></span
