Menambahkan fitur mode gelap dan bagian pengalaman & pendidikan pada halaman index.html, serta memperbarui gaya CSS untuk mendukung tampilan tersebut.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
         >
           <i class="fas fa-bars"></i>
         </button>
+        <!-- Dark mode toggle -->
+        <button
+          id="dark-toggle"
+          class="ml-4 text-xl focus:outline-none"
+          aria-label="Toggle dark mode"
+        >
+          <i class="fas fa-moon"></i>
+        </button>
       </div>
       <!-- Mobile Menu -->
       <div
@@ -227,7 +235,7 @@
                 class="w-[300px] h-[300px] lg:w-[400px] lg:h-[400px] relative"
               >
                 <img
-                  src="images/profile.jpg"
+                  src="images/profile.png"
                   alt="Profile Picture"
                   class="w-full h-full rounded-full object-cover border-4 border-white/30 shadow-2xl transform hover:scale-105 transition-transform duration-300"
                 />
@@ -466,6 +474,141 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- Experience & Education Section -->
+    <section
+      id="experience"
+      class="py-10 bg-gradient-to-b from-blue-50 via-blue-100 to-blue-50 relative"
+    >
+      <div
+        class="absolute inset-x-0 top-0 h-16 bg-gradient-to-b from-white to-transparent pointer-events-none z-10"
+      ></div>
+      <div class="container mx-auto px-2">
+        <h2 class="text-2xl font-bold text-center mb-6" data-aos="fade-up">
+          Experience & Education
+        </h2>
+        <div class="max-w-2xl mx-auto relative">
+          <div class="timeline-center-line" data-aos="fade-down"></div>
+          <div class="space-y-6">
+            <!-- Milestone 1: Education 1 (left) -->
+            <div
+              class="timeline-item timeline-left group"
+              data-aos="fade-right"
+            >
+              <div class="timeline-dot-center small"></div>
+              <div class="timeline-icon-center small icon-middle-left">
+                <i class="fas fa-school text-primary text-base"></i>
+              </div>
+              <div
+                class="timeline-card bg-white rounded-lg shadow-xs p-3 max-w-xs text-left md:text-right flex items-center md:justify-end mt-0"
+                tabindex="0"
+              >
+                <div class="timeline-card-content w-full">
+                  <div class="font-bold text-primary text-sm mb-1">
+                    SMK Negeri 4 Pontianak
+                  </div>
+                  <div class="text-xs text-gray-500 mb-1">
+                    Audio Video Engineering &bull; July 2018 – March 2021
+                  </div>
+                  <div class="text-gray-600 text-xs">
+                    Studied the basics of electronics, audio/video systems, and
+                    technical troubleshooting.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Milestone 2: Experience 1 (right) -->
+            <div
+              class="timeline-item timeline-right group"
+              data-aos="fade-left"
+            >
+              <div class="timeline-dot-center small"></div>
+              <div class="timeline-icon-center small icon-middle-right">
+                <i class="fas fa-laptop text-primary text-base"></i>
+              </div>
+              <div
+                class="timeline-card bg-white rounded-lg shadow-xs p-3 max-w-xs text-left flex items-center md:justify-start mt-0"
+                tabindex="0"
+              >
+                <div class="timeline-card-content w-full">
+                  <div class="font-bold text-primary text-sm mb-1">
+                    Smart Computer
+                  </div>
+                  <div class="text-xs text-gray-500 mb-1">
+                    Internship &bull; Sales & Technician &bull; 2020
+                  </div>
+                  <div class="text-gray-600 text-xs">
+                    Interned as a sales and computer technician, handling sales,
+                    assembly, repairs, and providing technical consultation to
+                    customers.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Milestone 3: Education 2 (left) -->
+            <div
+              class="timeline-item timeline-left group"
+              data-aos="fade-right"
+            >
+              <div class="timeline-dot-center small"></div>
+              <div class="timeline-icon-center small icon-middle-left">
+                <i class="fas fa-university text-primary text-base"></i>
+              </div>
+              <div
+                class="timeline-card bg-white rounded-lg shadow-xs p-3 max-w-xs text-left md:text-right flex items-center md:justify-end mt-0"
+                tabindex="0"
+              >
+                <div class="timeline-card-content w-full">
+                  <div class="font-bold text-primary text-sm mb-1">
+                    Politeknik Negeri Pontianak
+                  </div>
+                  <div class="text-xs text-gray-500 mb-1">
+                    D3 Informatics Engineering &bull; 2022 – Present
+                  </div>
+                  <div class="text-gray-600 text-xs">
+                    Currently pursuing a diploma in Informatics Engineering,
+                    focusing on software development, web, and data analytics.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Milestone 4: Experience 2 (right) -->
+            <div
+              class="timeline-item timeline-right group"
+              data-aos="fade-left"
+            >
+              <div class="timeline-dot-center small"></div>
+              <div class="timeline-icon-center small icon-middle-right">
+                <i class="fas fa-building text-primary text-base"></i>
+              </div>
+              <div
+                class="timeline-card bg-white rounded-lg shadow-xs p-3 max-w-xs text-left flex items-center md:justify-start mt-0"
+                tabindex="0"
+              >
+                <div class="timeline-card-content w-full">
+                  <div class="font-bold text-primary text-sm mb-1">
+                    Diskominfo West Kalimantan Province
+                  </div>
+                  <div class="text-xs text-gray-500 mb-1">
+                    Programmer &bull; Informatics Application Division &bull;
+                    Late 2024 – Early 2025
+                  </div>
+                  <div class="text-gray-600 text-xs">
+                    Worked as a programmer, developing and maintaining internal
+                    applications and supporting digital transformation at the
+                    West Kalimantan Provincial Communication and Information
+                    Office.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="absolute inset-x-0 bottom-0 h-16 bg-gradient-to-t from-white to-transparent pointer-events-none z-10"
+      ></div>
     </section>
 
     <!-- Projects Section -->
