--- a/index.html
+++ b/index.html
@@ -193,6 +193,15 @@
                 <span class="typed-text"></span
                 ><span class="cursor-blink">&nbsp;</span>
               </p>
+              <div class="flex justify-center md:hidden mb-6">
+                <div class="w-48 h-48 sm:w-64 sm:h-64 relative">
+                  <img
+                    src="images/profile.png"
+                    alt="Profile Picture"
+                    class="w-full h-full rounded-full object-cover border-4 border-white/30 shadow-2xl"
+                  />
+                </div>
+              </div>
               <div
                 class="text-base sm:text-lg leading-relaxed mb-6 sm:mb-8 opacity-90 max-w-2xl mx-auto md:mx-0"
               >
@@ -497,7 +506,9 @@
               data-aos="fade-right"
             >
               <div class="timeline-dot-center small"></div>
-              <div class="timeline-icon-center small icon-middle-left">
+              <div
+                class="timeline-icon-center small icon-middle-left md:flex hidden"
+              >
                 <i class="fas fa-school text-primary text-base"></i>
               </div>
               <div
@@ -524,7 +535,9 @@
               data-aos="fade-left"
             >
               <div class="timeline-dot-center small"></div>
-              <div class="timeline-icon-center small icon-middle-right">
+              <div
+                class="timeline-icon-center small icon-middle-right md:flex hidden"
+              >
                 <i class="fas fa-laptop text-primary text-base"></i>
               </div>
               <div
@@ -552,7 +565,9 @@
               data-aos="fade-right"
             >
               <div class="timeline-dot-center small"></div>
-              <div class="timeline-icon-center small icon-middle-left">
+              <div
+                class="timeline-icon-center small icon-middle-left md:flex hidden"
+              >
                 <i class="fas fa-university text-primary text-base"></i>
               </div>
               <div
@@ -579,7 +594,9 @@
               data-aos="fade-left"
             >
               <div class="timeline-dot-center small"></div>
-              <div class="timeline-icon-center small icon-middle-right">
+              <div
+                class="timeline-icon-center small icon-middle-right md:flex hidden"
+              >
                 <i class="fas fa-building text-primary text-base"></i>
               </div>
               <div
@@ -698,7 +715,7 @@
               </div>
               <div class="flex gap-4">
                 <a
-                  href="#"
+                  href="https://github.com/IrfanSabrian"
                   class="w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center text-primary hover:bg-primary hover:text-white transition-colors"
                 >
                   <i class="fab fa-github"></i>
@@ -716,7 +733,7 @@
                   <i class="fab fa-twitter"></i>
                 </a>
                 <a
-                  href="#"
+                  href="https://instagram.com/irf.shyonn"
                   class="w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center text-primary hover:bg-primary hover:text-white transition-colors"
                 >
                   <i class="fab fa-instagram"></i>
