--- a/index.html
+++ b/index.html
@@ -847,8 +847,15 @@
       <div class="absolute inset-0 bg-black/50 backdrop-blur-sm"></div>
       <div class="fixed inset-0 flex items-center justify-center p-2 sm:p-4">
         <div
-          class="bg-white dark:bg-gray-800 rounded-xl shadow-2xl w-full max-w-5xl max-h-[95vh] sm:max-h-[90vh] flex flex-col border border-gray-200 dark:border-gray-700"
+          class="bg-white dark:bg-gray-800 rounded-xl shadow-2xl w-full max-w-5xl max-h-[95vh] sm:max-h-[90vh] flex flex-col border border-gray-200 dark:border-gray-700 relative"
         >
+          <!-- Tombol Close di pojok kanan atas -->
+          <button
+            id="cv-modal-close"
+            class="absolute top-2 right-2 sm:top-4 sm:right-4 z-20 p-1.5 rounded-lg text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
+          >
+            <i class="fas fa-times"></i>
+          </button>
           <!-- Modal Header -->
           <div
             class="flex flex-wrap gap-3 p-3 sm:p-4 border-b border-gray-200 dark:border-gray-700"
@@ -888,46 +895,19 @@
                 </button>
               </div>
             </div>
-            <!-- Right Side -->
-            <div class="flex items-center gap-2">
-              <div
-                class="flex items-center gap-1 bg-gray-50 dark:bg-gray-900 rounded-lg p-1"
-              >
-                <button
-                  id="cv-prev"
-                  class="p-1.5 rounded-lg text-gray-600 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors"
-                >
-                  <i class="fas fa-chevron-left"></i>
-                </button>
-                <span
-                  id="cv-page-info"
-                  class="text-sm font-medium w-16 text-center text-gray-600 dark:text-gray-300"
-                  >Page 1 of 1</span
-                >
-                <button
-                  id="cv-next"
-                  class="p-1.5 rounded-lg text-gray-600 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors"
-                >
-                  <i class="fas fa-chevron-right"></i>
-                </button>
-              </div>
-              <button
-                id="cv-modal-close"
-                class="p-1.5 rounded-lg text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
-              >
-                <i class="fas fa-times"></i>
-              </button>
-            </div>
           </div>
           <!-- Modal Content -->
           <div
-            class="flex-1 p-2 sm:p-4 overflow-auto bg-gray-50 dark:bg-gray-900"
+            class="flex-1 p-2 sm:p-4 overflow-auto bg-gray-50 dark:bg-gray-900 w-full h-full"
           >
-            <div id="pdf-container" class="mx-auto flex justify-center">
-              <canvas
-                id="pdf-viewer"
-                class="max-w-full shadow-lg rounded-lg bg-white dark:bg-gray-800"
-              ></canvas>
+            <div
+              id="pdf-container"
+              class="mx-auto flex flex-col items-center w-full min-h-[200px] h-full gap-4"
+            >
+              <div
+                id="pdf-pages"
+                class="w-full flex flex-col items-center gap-4"
+              ></div>
             </div>
           </div>
         </div>
